--- a/index.html
+++ b/index.html
@@ -79,5 +79,6 @@
 </head>
   <body class="antialiased overflow-x-hidden selection:bg-blue-500 selection:text-white">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"><script>
   </body>
 </html>
